--- a/styles/match_details.css
+++ b/styles/match_details.css
@@ -41,7 +41,7 @@
 
 /* vs */
 /* .st-emotion-cache-cnbvxy */
-.e1nzilvr5 {
+[data-testid="stHeadingWithActionElements"] {
   text-align: center; 
   display: flex;
   justify-content: center; 
